# adventofcode2025

./: .gitignore  Cargo.toml  cleanup.sh  readme.md  template.sh
2015/src/: day11.rs  day13.rs  day15.rs  day16.rs  day17.rs  day18.rs  day20.rs  day21.rs  day7.rs
2016/src/: day1.rs  day10.rs  day12.rs  day14.rs  day15.rs  day16.rs  day19.rs  day2.rs  day21.rs  day23.rs  day24.rs  day3.rs  day6.rs  lib.rs
src/: day.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
