[package]
name = "advent-of-code-2015"
version = "0.1.0"
authors = ["Alexander Jahn <info@alex360.dev>"]
edition = "2021"

[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
permute = "0.2.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tests)'] }
